<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:visibility="visible"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="260dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fef"
        tools:srcCompat="@drawable/fef" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/First_Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"/>

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Last_Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"/>

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/prompt_password_Confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"/>

    <Button
        android:id="@+id/BSingUp2"
        android:layout_width="380dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_sign_up"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="124dp"
        android:layout_height="56dp"
        android:text="Admin?"
        app:layout_constraintBottom_toTopOf="@+id/BSingUp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        android:backgroundTint="#000000"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"/>

</androidx.constraintlayout.widget.ConstraintLayout>
